udpate Python 104 exercise reflection questions

--- a/activities/Python 104 - Writing Files, Inventorying Files.ipynb
+++ b/activities/Python 104 - Writing Files, Inventorying Files.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from os.path import join, getsize\n",
+    "from os.path import join, getsize, getctime\n",
     "import csv"
    ]
   },
@@ -184,8 +184,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using os.listdir()\n",
+    "\n",
+    "We can generate a list of the files in the directory using the `os.listdir()` function. This list will include the file names for all the files in the directory. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['.DS_Store', 'audio', 'image', 'pdf', 'presentation', 'video', 'web-files-small-metadata.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "dir_list = os.listdir(walk_this_directory)\n",
+    "\n",
+    "print(dir_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use the `listdir()` function to create manifest of the files in the `pdf` directory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01-1480.pdf\n",
+      "Chapter03.pdf\n",
+      "file.pdf\n",
+      "HR2021 commtext.pdf\n",
+      "PFCHEJ.pdf\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create the list\n",
+    "dir_list = os.listdir(os.path.join(walk_this_directory, 'pdf'))\n",
+    "\n",
+    "# set up a file name for a file to create\n",
+    "fout = 'pdf-file-list.txt'\n",
+    "\n",
+    "# open another file in write mode to write the emails.\n",
+    "with open(fout, 'w') as f:\n",
+    "    for filename in dir_list:\n",
+    "        f.write(filename)\n",
+    "        f.write('\\n')\n",
+    "\n",
+    "print(open(fout).read())    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using os.scandir()\n",
+    "\n",
+    "This is useful, but there is still a lot of information from the filepath information, which gives a lot of context about the file in the filesystem, that we cannot get using the listdir() method. To get a list that we can iterate through, check whether items are recognized as files by the system, and iterate through the list. For this, we can use the `os.scandir()` function. We can use other functions, like `os.is_file()`, which will evaluate whether the item is a file. We can use this function to create data that we can iterate through using a `with` ... `as` construction, like we have seen in opening files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking at: <DirEntry '.DS_Store'>\n",
+      "This is a file named <DirEntry '.DS_Store'> that takes up 6148 bytes\n",
+      "Looking at: <DirEntry 'audio'>\n",
+      "This is a directory and contains 4 files ( ['000727.ram', '11-3250JohnsonvFolinoEtAl.wma', 'mj_telework_exchange_final_100710.mp3', 'NEWSLINE_802AF71F439D401585C6FCB02F358307.mp3'] ).\n",
+      "Looking at: <DirEntry 'image'>\n",
+      "This is a directory and contains 5 files ( ['1005107061.tif', '13080t.jpg', 'k7989-7x.jpg', 'm237a2f.gif', 'orca.via_.moc_.noaa_.jpg'] ).\n",
+      "Looking at: <DirEntry 'pdf'>\n",
+      "This is a directory and contains 5 files ( ['01-1480.pdf', 'Chapter03.pdf', 'file.pdf', 'HR2021 commtext.pdf', 'PFCHEJ.pdf'] ).\n",
+      "Looking at: <DirEntry 'presentation'>\n",
+      "This is a directory and contains 3 files ( ['ADAEMPLOYMENTTaxIncentives.ppt', 'BudgetandGrants012710.ppt', 'Non-FTE-Trainee-Activities-060109.ppt'] ).\n",
+      "Looking at: <DirEntry 'video'>\n",
+      "This is a directory and contains 4 files ( ['04-04-21full.asf', 'glmp_cig.EQ.wm.p20.t12z', 'oct17cc.asx', 'vlwhcssc.asx'] ).\n",
+      "Looking at: <DirEntry 'web-files-small-metadata.csv'>\n",
+      "This is a file named <DirEntry 'web-files-small-metadata.csv'> that takes up 9069 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "with os.scandir(walk_this_directory) as items_list:\n",
+    "    for entry in items_list:\n",
+    "        print('Looking at:',entry)\n",
+    "        if entry.is_dir():\n",
+    "            file_list = os.listdir(os.path.join(entry))\n",
+    "            print('This is a directory and contains',len(file_list),'files (',file_list,').')\n",
+    "        if entry.is_file():\n",
+    "            print('This is a file named',entry,'that takes up',os.path.getsize(entry),'bytes')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using os.walk()\n",
+    "\n",
+    "The `os.walk()` function allows us to do a more complex mapping of the directory. This function can be used to create a \"tuple\" &ndash; a special datatype that creates a small, unmutable set that we can reuse &ndash; and we can store that information to derive foldernames and paths to individual files. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -533,18 +657,24 @@
    "source": [
     "## Reflection Activities\n",
     "\n",
+    "1. Write a script that uses `os.listdir()` for each of the directories in the `Bundle-web-files-small` directory. You can put in the path names directly as variables, but you should use the `os.path.join()` function to create filepaths that do not depend on your inputting the exact filepath string, which will vary across operating systems.\n",
+    "1. Write a script that uses `os.scandir()` to check whether or not the entities in the director are files or directories. The script should output a count of files and a count of directories.\n",
+    "1. Examine the examples above that use `os.walk()`. What is the difference between this and the previous two functions? In some ways it lets you get deeper into the file structure, so please explain your observation in a sentence or two.  \n",
     "1. Create a script that will create an inventory of all the files in the assets folder `Bundle-web-files-small`. The inventory should be a CSV file, and it should include the filename of the file, the directory path for the file, the full path to the file, and the file size. You may include any other information that you think is important. Call this file `inventory_script.py`.\n",
     "1. Extend the above script, using the techniques demonstrated here, and add in a way to determine the file extension of the file, then add the extension to the CSV output? (Hint: you could split the filename string, right?)\n",
     "1. Building on the above examples, can you a) write functions that bundle code to ask for a directory? You could call this function `create_manifest_information` and it should be able to accept a path to a directory as an argument and return the manifestInfo list. And b) write a function that would accept the manifestInfo list as an argument and create a CSV? \n",
-    "1. Write a script that can walk through a series of directories nad identify files based on their file extension. For example, perhaps you want to count the number of .pdf files or .jpg. Create file that can look for this information and then tally the files. Then, have the program output the list of filenames and filepaths in a CSV file. Call this file `extension_detector.py`. \n",
-    "1. Write a script that creates a `master` and `derivative` directory within a subdirectory that has the file's name as its name. For example, if there are two files, one named `001.jpg` and `audition.wav`, there should be a directory named `001` and another named `audition`. Within these, there should be master and derivative folders. The original files should be in the `master` folder. Call this file `master_and_derivatives.py`."
+    "1. Write a script that can walk through a series of directories nad identify files based on their file extension. For example, perhaps you want to count the number of .pdf files or .jpg. Create file that can look for this information and then tally the files. Then, have the program output the list of filenames and filepaths in a CSV file. Call this file `extension_detector.py`. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next week, dictionaries (streamline CSV creation), and additional derived information: mimetype and fixity/hash."
+    "This activity took two weeks when combined with the [Git exercise](exercise-git-intro.md). \n",
+    "\n",
+    "Next week, dictionaries (streamline CSV creation), and additional derived information: mimetype and fixity/hash.\n",
+    "\n",
+    "1. Write a script that creates a `master` and `derivative` directory within a subdirectory that has the file's name as its name. For example, if there are two files, one named `001.jpg` and `audition.wav`, there should be a directory named `001` and another named `audition`. Within these, there should be master and derivative folders. The original files should be in the `master` folder. Call this file `master_and_derivatives.py`."
    ]
   }
  ],
