update class notes 2019-03-14

--- a/activities/class-notes/2019-03-14 Review and worked examples.ipynb
+++ b/activities/class-notes/2019-03-14 Review and worked examples.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Review - iterating, listing files, writing lists to files\n",
     "\n",
-    "Let's review where we've been so far this semester. \n",
+    "Notes from class, 14 March 2019. Reviewing where we've been so far. \n",
     "\n",
-    "Below are worked examples from the previous activities in looking through files, including listdir(), scandir(), and os.walk().\n",
+    "Below are worked examples from the previous activities in looking through files, including `listdir()`, `scandir()`, and `os.walk()`.\n",
     "\n",
     "Below sections work through the following, which are based on the Reflection Questions from the Python 104 examples."
    ]
