add output test for file manifest functions

--- a/activities/class-notes/2019-03-14 Review and worked examples.ipynb
+++ b/activities/class-notes/2019-03-14 Review and worked examples.ipynb
@@ -825,6 +825,43 @@
     "\n",
     "write_manifest_to_csv(newManifest, 'second-test-manifest.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index,filename,in_folder_path,full_file_path,size,extension\r",
+      "\r\n",
+      "1,.DS_Store,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/.DS_Store,6148,DS_Store\r",
+      "\r\n",
+      "2,01N-0256_emc-000171-01.wps,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/01N-0256_emc-000171-01.wps,18451,wps\r",
+      "\r\n",
+      "3,0528.jp2,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/0528.jp2,9400598,jp2\r",
+      "\r\n",
+      "4,080-b2-tambarani.mp3,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/080-b2-tambarani.mp3,12705156,mp3\r",
+      "\r\n",
+      "5,1898111001_1.txt,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/1898111001_1.txt,70753,txt\r",
+      "\r\n",
+      "6,a0000003c.gdbtable.sdc,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/a0000003c.gdbtable.sdc,165699,sdc\r",
+      "\r\n",
+      "7,ch00001.rtf,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/ch00001.rtf,1086,rtf\r",
+      "\r\n",
+      "8,fertilizeruse.xls,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/fertilizeruse.xls,665088,xls\r",
+      "\r\n",
+      "9,master narrative.docx,../../assets/Bundle-legacy-files,../../assets/Bundle-legacy-files/master narrative.docx,159368,docx\r",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get plaintext\n",
+    "!head second-test-manifest.csv"
+   ]
   }
  ],
  "metadata": {
