add output test for file manifest functions

--- a/activities/class-notes/2019-03-14 Review and worked examples.ipynb
+++ b/activities/class-notes/2019-03-14 Review and worked examples.ipynb
@@ -859,7 +859,7 @@
     }
    ],
    "source": [
-    "# get plaintext\n",
+    "# get plaintext output of the manifest to see if it's expected information\n",
     "!head second-test-manifest.csv"
    ]
   }
