new Python 106 dictionaries

--- a/activities/Python 106 - Dictionaries & APIs.ipynb
+++ b/activities/Python 106 - Dictionaries & APIs.ipynb
@@ -524,44 +524,21 @@
    "source": [
     "When compared with the html version here, notice that that page also has 25 results! \n",
     "\n",
-    "See https://www.loc.gov/photos/?fa=online-format:image&q=kittens"
+    "See https://www.loc.gov/photos/?fa=online-format:image&q=kittens\n",
+    "\n",
+    "Is it possible to extract each result into its own file? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wrote kitten-result-1.json\n",
-      "wrote kitten-result-2.json\n",
-      "wrote kitten-result-3.json\n",
-      "wrote kitten-result-4.json\n",
-      "wrote kitten-result-5.json\n",
-      "wrote kitten-result-6.json\n",
-      "wrote kitten-result-7.json\n",
-      "wrote kitten-result-8.json\n",
-      "wrote kitten-result-9.json\n",
-      "wrote kitten-result-10.json\n",
-      "wrote kitten-result-11.json\n",
-      "wrote kitten-result-12.json\n",
-      "wrote kitten-result-13.json\n",
-      "wrote kitten-result-14.json\n",
-      "wrote kitten-result-15.json\n",
-      "wrote kitten-result-16.json\n",
-      "wrote kitten-result-17.json\n",
-      "wrote kitten-result-18.json\n",
-      "wrote kitten-result-19.json\n",
-      "wrote kitten-result-20.json\n",
-      "wrote kitten-result-21.json\n",
-      "wrote kitten-result-22.json\n",
-      "wrote kitten-result-23.json\n",
-      "wrote kitten-result-24.json\n",
-      "wrote kitten-result-25.json\n",
-      "wrote files!\n"
+      "25\n"
      ]
     }
    ],
@@ -570,20 +547,123 @@
     "\n",
     "data = json.loads(r.text)\n",
     "\n",
+    "#grab the images into a list\n",
+    "kittensList = data['results']\n",
+    "print(len(kittensList))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "fname = 'kitten-result-'\n",
     "format = '.json'\n",
-    "n = 0\n",
+    "n = 0 \n",
     "\n",
-    "for item in data['results']:\n",
+    "for item in kittensList:\n",
     "    n = n + 1\n",
     "    file = fname + str(n) + format\n",
     "#    print(item)\n",
-    "    item_result = item\n",
     "    with open(file, 'w') as f:\n",
-    "        data = item_result\n",
-    "        f.write(json.dumps(data))#, f, encoding='utf-8', sort_keys=True)\n",
+    "        f.write(json.dumps(item))#, f, encoding='utf-8', sort_keys=True)\n",
     "        print('wrote',file)\n",
-    "print('wrote files!')"
+    "print('wrote',n,'files!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How could we extract the image URLs?                       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "access_restricted\n",
+      "original_format\n",
+      "contributor\n",
+      "id\n",
+      "partof\n",
+      "subject\n",
+      "index\n",
+      "group\n",
+      "location_country\n",
+      "title\n",
+      "online_format\n",
+      "location\n",
+      "number_former_id\n",
+      "mime_type\n",
+      "digitized\n",
+      "description\n",
+      "timestamp\n",
+      "site\n",
+      "campaigns\n",
+      "extract_timestamp\n",
+      "date\n",
+      "number\n",
+      "other_title\n",
+      "dates\n",
+      "language\n",
+      "url\n",
+      "shelf_id\n",
+      "hassegments\n",
+      "image_url\n",
+      "aka\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in kittensList[0]:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.loc.gov/item/2016892679/\n",
+      "https://www.loc.gov/item/20002503/\n",
+      "https://www.loc.gov/item/sm1880.04831/\n",
+      "https://www.loc.gov/item/2013646722/\n",
+      "https://www.loc.gov/item/2017650796/\n",
+      "https://www.loc.gov/item/sm1883.19433/\n",
+      "https://www.loc.gov/item/20020550/\n",
+      "https://www.loc.gov/item/sm1879.15529/\n",
+      "https://www.loc.gov/item/04028966/\n",
+      "https://www.loc.gov/item/2008660988/\n",
+      "https://www.loc.gov/item/2016796464/\n",
+      "https://www.loc.gov/item/2016816441/\n",
+      "https://www.loc.gov/item/2016817090/\n",
+      "https://www.loc.gov/item/2005681032/\n",
+      "https://www.loc.gov/item/2014717546/\n",
+      "https://www.loc.gov/item/2002706499/\n",
+      "https://www.loc.gov/item/22017222/\n",
+      "https://www.loc.gov/item/sm1882.12947/\n",
+      "https://www.loc.gov/item/90708798/\n",
+      "https://www.loc.gov/item/2002697129/\n",
+      "https://www.loc.gov/item/2003653666/\n",
+      "https://www.loc.gov/item/2003653670/\n",
+      "https://www.loc.gov/item/07028973/\n",
+      "https://www.loc.gov/item/2002697127/\n",
+      "https://www.loc.gov/item/2002697126/\n"
+     ]
+    }
+   ],
+   "source": [
+    "for kitten in kittensList:\n",
+    "    print(kitten['url'])"
    ]
   }
  ],
