new Python 106 dictionaries

--- a/activities/Python 106 - Dictionaries & APIs.ipynb
+++ b/activities/Python 106 - Dictionaries & APIs.ipynb
@@ -415,6 +415,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### API Call question\n",
+    "\n",
+    "We made a request to the loc.gov JSON API. Can you fill in the following & explain the missing elements? \n",
+    "\n",
+    "```\n",
+    "http://www.loc.gov/_______/?fo=_______&q=_______\n",
+    "```\n",
+    "\n",
+    "What other items might you use after the `?`..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parsing the Data from the API\n",
+    "\n",
     "Now, we can get the response, let's save to a file. To do this, use the `json` module. "
    ]
   },
